add global permalink

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 
 baseurl: "/intro-dh-portfolio-template" # CHANGE THIS! the subpath of your site, e.g. /blog
 url: "https://msaxton.github.io/" # CHANGE THIS the base hostname & protocol for your site, e.g. http://example.com
+permalink: /:categories/:year/:month/:day/:title:output_ext
 twitter_username: 
 github_username:  
 
