--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,7 @@ header_pages:
 collections:
   evaluations:
     output: true
+    permalink: /:collection/:name
   exercises:
     output: true
   lessons: 
