--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ header_pages:
 collections:
   evaluations:
     output: true
-    permalink: /:collection/:path
+    permalink: /:collection/:path/
   exercises:
     output: true
   lessons: 
